<resources>
    <string name="app_name">Serah</string>

    <!-- Authentication Strings -->
    <string name="email">E-mail</string>
    <string name="email_phone">E-mail/Phone number</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot\nPassword?</string>
    <string name="login">Login</string>

    <string name="signup">Register</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone number</string>

    <string name="forget_pass_desc">Please enter your e-mail address. We will send you a link to let you reset your password and login back.</string>

    <!-- Terms and Conditions -->
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- Review -->
    <string name="review_posted">We appreciate your review, as it will very much help the restaurant to get better reputation. We hope you’ll have another splendid dining experience!</string>
    <string name="title_location_permission">Request for location permission</string>
    <string name="text_location_permission">We need your location to suggest nearby restaurant</string>
    <string name="ok">Ok</string>


</resources>