<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.ForgotPasswordActivity"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <ImageView
        android:id="@+id/image_view_backnavigation"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/navigation"
        app:layout_constraintBottom_toTopOf="@+id/image_view_forgotpass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_view_forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/forgot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/epilogue_bold"
        android:text="@string/forgot_pass"
        android:textColor="#000000"
        android:textSize="30sp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@+id/image_view_forgotpass"
        app:layout_constraintTop_toBottomOf="@+id/image_view_forgotpass" />

    <TextView
        android:id="@+id/text_view_forgotpass_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:text="@string/forget_pass_desc"
        app:layout_constraintStart_toStartOf="@+id/text_view_forgotpass"
        app:layout_constraintTop_toBottomOf="@+id/text_view_forgotpass" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/text_field_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#F3F2F2"
        android:drawableStart="@drawable/mail_outline"
        android:drawablePadding="8dp"
        android:fontFamily="@font/epilogue_light"
        android:hint="@string/email"
        android:minHeight="48dp"
        android:textColorHint="#BDBDBD"
        app:layout_constraintStart_toStartOf="@+id/text_view_forgotpass_desc"
        app:layout_constraintTop_toBottomOf="@+id/text_view_forgotpass_desc" />


    <com.google.android.material.button.MaterialButton
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/primary"
        android:fontFamily="@font/epilogue_regular"
        android:text="@string/login"
        android:textColor="@color/secondary"
        app:layout_constraintEnd_toEndOf="@+id/text_field_email"
        app:layout_constraintStart_toStartOf="@+id/text_field_email"
        app:layout_constraintTop_toBottomOf="@+id/text_field_email" />


</androidx.constraintlayout.widget.ConstraintLayout>