<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.SignupActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_view_signupimage"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/thank_you"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#B33333"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintTop_toBottomOf="@id/image_view_signupimage">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/epilogue_bold"
            android:text="Sign Up"
            android:textSize="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_field_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#F3F2F2"
            android:drawableStart="@drawable/mail_outline"
            android:drawablePadding="8dp"
            android:fontFamily="@font/epilogue_light"
            android:hint="@string/email_phone"
            android:minHeight="48dp"
            android:textColorHint="#BDBDBD"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_editor_absoluteX="30dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_field_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#F3F2F2"
            android:drawableStart="@drawable/mail_outline"
            android:drawablePadding="8dp"
            android:fontFamily="@font/epilogue_light"
            android:hint="@string/full_name"
            android:minHeight="48dp"
            android:textColorHint="#BDBDBD"
            app:layout_constraintTop_toBottomOf="@+id/text_field_email"
            tools:layout_editor_absoluteX="30dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_field_phonenum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#F3F2F2"
            android:drawableStart="@drawable/mail_outline"
            android:drawablePadding="8dp"
            android:fontFamily="@font/epilogue_light"
            android:hint="@string/phone"
            android:minHeight="48dp"
            android:textColorHint="#BDBDBD"
            app:layout_constraintTop_toBottomOf="@+id/text_field_fullname"
            tools:layout_editor_absoluteX="30dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_field_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#F3F2F2"
            android:drawableStart="@drawable/mail_outline"
            android:drawablePadding="8dp"
            android:fontFamily="@font/epilogue_light"
            android:hint="@string/password"
            android:minHeight="48dp"
            android:textColorHint="#BDBDBD"
            app:layout_constraintTop_toBottomOf="@+id/text_field_phonenum"
            tools:layout_editor_absoluteX="30dp" />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_register"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/epilogue_regular"
            android:text="@string/signup"
            android:textColor="@color/secondary"
            app:layout_constraintEnd_toEndOf="@+id/text_field_password"
            app:layout_constraintStart_toStartOf="@+id/text_field_password"
            app:layout_constraintTop_toBottomOf="@+id/text_field_password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/button_register"
            app:layout_constraintEnd_toStartOf="@+id/button_register"
            app:layout_constraintTop_toBottomOf="@+id/button_register">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plusjakartasans_regular"
                android:text="New to us?" />

            <TextView
                android:id="@+id/text_view_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:fontFamily="@font/plusjakartasans_semibold"
                android:text="Sign In"
                android:textColor="#000000" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.constraintlayout.widget.ConstraintLayout>